Added readme, components for custom controls

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,14 @@
-<number-range-input></number-range-input>
+<div>
+  <p>Number range input</p>
+  <number-range-input controlClass="range"></number-range-input>
+</div>
+
+<div>
+  <p>Currency input</p>
+  <currency-input controlClass="currency"></currency-input>
+</div>
+
+<div>
+  <p>Positive numbers input</p>
+  <positive-numbers-input controlClass="positive"></positive-numbers-input>
+</div>
