--- a/projects/controls-library/src/lib/shared/components/number-range-input/number-range-input.component.html
+++ b/projects/controls-library/src/lib/shared/components/number-range-input/number-range-input.component.html
@@ -1,3 +1,7 @@
 <input
-  type="text"
-  [ngClass]="controlClass">
+    type="text"
+    [ngClass]="controlClass"
+    [value]="value"
+    (input)="onChange($event.target.value)"
+    (blur)="touched()"
+    [disabled]="disable">
