--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,8 +7,11 @@
   <div>
     <p>Number range input</p>
     <number-range-input
-        controlClass="range"
-        formControlName="range"></number-range-input>
+      controlClass="range"
+      formControlName="range"
+      minValue=0
+      maxValue=100>
+    </number-range-input>
   </div>
 
   <div>
