--- a/projects/controls-library/src/lib/shared/components/number-range-input/number-range-input.component.html
+++ b/projects/controls-library/src/lib/shared/components/number-range-input/number-range-input.component.html
@@ -5,4 +5,7 @@
     [value]="value"
     (input)="onChange($event.target.value)"
     (blur)="touched()"
-    [disabled]="disabled">
+    [disabled]="disabled"
+    [placeholder]="placeholder">
+
+<ng-container *ngTemplateOutlet="suffix"></ng-container>
