Added additional class

--- a/projects/controls-library/src/lib/shared/components/number-range-input/number-range-input.component.html
+++ b/projects/controls-library/src/lib/shared/components/number-range-input/number-range-input.component.html
@@ -1,7 +1,8 @@
 <input
     #inputControl
     type="text"
-    [ngClass]="controlClass"
+    class="controlClass"
+    [ngClass]="additionalClass"
     [value]="value"
     (input)="onChange($event.target.value)"
     (blur)="touched()"
