--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,7 +12,8 @@
       minValue=0
       maxValue=100
       placeholder="test"
-      [suffix]="suffix">
+      [suffix]="suffix"
+      additionalClass="additional-class">
     </number-range-input>
 
     <ng-template #suffix>
