--- a/projects/controls-library/src/lib/shared/components/number-range-input/number-range-input.component.html
+++ b/projects/controls-library/src/lib/shared/components/number-range-input/number-range-input.component.html
@@ -1,7 +1,7 @@
 <input
     #inputControl
     type="text"
-    class="controlClass"
+    [class]="controlClass"
     [ngClass]="additionalClass"
     [value]="value"
     (input)="onChange($event.target.value)"
