Fixed space, dot, comma

--- a/projects/controls-library/src/lib/shared/components/number-range-input/number-range-input.component.html
+++ b/projects/controls-library/src/lib/shared/components/number-range-input/number-range-input.component.html
@@ -7,7 +7,7 @@
     [class]="controlClass"
     [ngClass]="additionalClass"
     [value]="value"
-    (input)="onChange($event.target.value)"
+    (input)="onChange($event)"
     (blur)="touched()"
     [disabled]="disabled">
 
