Added div container

--- a/projects/controls-library/src/lib/shared/components/number-range-input/number-range-input.component.html
+++ b/projects/controls-library/src/lib/shared/components/number-range-input/number-range-input.component.html
@@ -1,14 +1,16 @@
-<ng-container *ngTemplateOutlet="prefix"></ng-container>
+<div [ngClass]="containerClass">
+    <ng-container *ngTemplateOutlet="prefix"></ng-container>
 
-<input
-    #inputControl
-    type="text"
-    [id]="inputId"
-    [class]="controlClass"
-    [ngClass]="additionalClass"
-    [value]="value"
-    (input)="onChange($event)"
-    (blur)="touched()"
-    [disabled]="disabled">
+    <input
+        #inputControl
+        type="text"
+        [id]="inputId"
+        [class]="controlClass"
+        [ngClass]="additionalClass"
+        [value]="value"
+        (input)="onChange($event)"
+        (blur)="touched()"
+        [disabled]="disabled">
 
-<ng-container *ngTemplateOutlet="suffix"></ng-container>
+    <ng-container *ngTemplateOutlet="suffix"></ng-container>
+</div>
