--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,6 +6,7 @@
     </ng-template>
 
     <number-range-input
+      containerClass="input-group"
       inputId="rangeInput"
       controlClass="range"
       formControlName="range"
