--- a/projects/controls-library/src/lib/shared/components/currency-input/currency-input.component.html
+++ b/projects/controls-library/src/lib/shared/components/currency-input/currency-input.component.html
@@ -1,3 +1,16 @@
-<input
-  type="text"
-  [ngClass]="controlClass">
+<div [ngClass]="containerClass">
+    <ng-container *ngTemplateOutlet="prefix"></ng-container>
+
+    <input
+        #inputControl
+        type="text"
+        [id]="inputId"
+        [class]="controlClass"
+        [ngClass]="additionalClass"
+        [value]="value"
+        (input)="onChange($event.target.value)"
+        (blur)="touched()"
+        [disabled]="disabled">
+
+    <ng-container *ngTemplateOutlet="suffix"></ng-container>
+</div>
