Completed readme, added currency placeholder

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -34,7 +34,7 @@
        inputId="currencyInput"
        controlClass="currency-input"
        formControlName="currency"
-       placeholder="currency test"
+       placeholder="0"
        [locale]="locale"
        [prefix]="currencyInputLabel"
        [suffix]="currencyInputError"
