--- a/projects/controls-library/src/lib/shared/components/positive-numbers-input/positive-numbers-input.component.html
+++ b/projects/controls-library/src/lib/shared/components/positive-numbers-input/positive-numbers-input.component.html
@@ -1,3 +1,16 @@
+<div [ngClass]="containerClass">
+    <ng-container *ngTemplateOutlet="prefix"></ng-container>
+
 <input
-  type="text"
-  [ngClass]="controlClass">
+    #inputControl
+    type="text"
+    [id]="inputId"
+    [class]="controlClass"
+    [ngClass]="additionalClass"
+    [value]="value"
+    (input)="onChange($event.target.value)"
+    (blur)="touched()"
+    [disabled]="disabled">
+
+    <ng-container *ngTemplateOutlet="suffix"></ng-container>
+</div>
