Currency input added positive or positive-negative flag

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -35,6 +35,7 @@
        controlClass="currency-input"
        formControlName="currency"
        placeholder="0"
+       positive="true"
        [locale]="locale"
        [prefix]="currencyInputLabel"
        [suffix]="currencyInputError"
