Readme fixed, currency input completed

--- a/projects/controls-library/src/lib/shared/components/currency-input/currency-input.component.html
+++ b/projects/controls-library/src/lib/shared/components/currency-input/currency-input.component.html
@@ -9,7 +9,8 @@
         [ngClass]="additionalClass"
         [placeholder]="placeholder || ''"
         [formControl]="formControl"
-        (blur)="onTouched()">
+        (blur)="onTouched()"
+        (focus)="focus=true">
 
     <ng-container *ngTemplateOutlet="suffix"></ng-container>
 </div>
