--- a/projects/controls-library/src/lib/shared/components/positive-numbers-input/positive-numbers-input.component.html
+++ b/projects/controls-library/src/lib/shared/components/positive-numbers-input/positive-numbers-input.component.html
@@ -7,10 +7,8 @@
     [id]="inputId"
     [class]="controlClass"
     [ngClass]="additionalClass"
-    [value]="value"
-    (input)="onChange($event.target.value)"
-    (blur)="touched()"
-    [disabled]="disabled">
+    [formControl]="formControl"
+    (blur)="touched()">
 
     <ng-container *ngTemplateOutlet="suffix"></ng-container>
 </div>
