--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <form [formGroup]="form">
   <div>
 
-    <!-- <ng-template #numberRangeLabel>
+    <ng-template #numberRangeLabel>
       <label for="rangeInput">Number range input</label><br>
     </ng-template>
 
@@ -46,7 +46,7 @@
       <div>
         Required
       </div>
-    </ng-template> -->
+    </ng-template>
 
     <hr>
 
