--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <form [formGroup]="form">
   <div>
 
-    <ng-template #numberRangeLabel>
+    <!-- <ng-template #numberRangeLabel>
       <label for="rangeInput">Number range input</label><br>
     </ng-template>
 
@@ -21,7 +21,7 @@
       <div>
         Required
       </div>
-    </ng-template>
+    </ng-template> -->
 
     <hr>
 
@@ -50,7 +50,7 @@
 
     <hr>
 
-    <ng-template #positiveNumbersInputLabel>
+    <!-- <ng-template #positiveNumbersInputLabel>
       <label for="positiveNumbers">Positive numbers input</label><br>
     </ng-template>
 
@@ -70,7 +70,7 @@
       <div>
         Required
       </div>
-    </ng-template>
+    </ng-template> -->
 
   </div>
 </form>
