--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -36,7 +36,7 @@
        formControlName="currency"
        placeholder="0"
        [positive]="false"
-       [locale]="locale"
+       [locale]="'de-DE'"
        [prefix]="currencyInputLabel"
        [suffix]="currencyInputError"
        [additionalClass]="form.get('currency').hasError('required') ? 'additional-class' : ''">
