--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <form [formGroup]="form">
   <div>
 
-    <!-- <ng-template #numberRangeLabel>
+    <ng-template #numberRangeLabel>
       <label for="rangeInput">Number range input</label><br>
     </ng-template>
 
@@ -21,7 +21,7 @@
       <div>
         Required
       </div>
-    </ng-template> -->
+    </ng-template>
 
     <hr>
 
@@ -50,27 +50,27 @@
 
     <hr>
 
-    <!-- <ng-template #positiveNumbersInputLabel>
-      <label for="positiveNumbers">Positive numbers input</label><br>
+    <ng-template #positiveIntegerInputLabel>
+      <label for="positiveInteger">Positive integer input</label><br>
     </ng-template>
 
-    <positive-numbers-input
+    <positive-integer-input
        containerClass="input-group"
-       inputId="positiveNumbersInput"
-       controlClass="positive-numbers-input"
-       formControlName="positiveNumbers"
+       inputId="positiveIntegerInput"
+       controlClass="positive-integer-input"
+       formControlName="positiveInteger"
        placeholder="0"
        [allowLeadingNil]="false"
-       [prefix]="positiveNumbersInputLabel"
-       [suffix]="positiveNumbersInputError"
-       [additionalClass]="form.get('positiveNumbers').hasError('required') ? 'additional-class' : ''">
-    </positive-numbers-input>
+       [prefix]="positiveIntegerInputLabel"
+       [suffix]="positiveIntegerInputError"
+       [additionalClass]="form.get('positiveInteger').hasError('required') ? 'additional-class' : ''">
+    </positive-integer-input>
 
-    <ng-template #positiveNumbersInputError>
+    <ng-template #positiveIntegerInputError>
       <div>
         Required
       </div>
-    </ng-template> -->
+    </ng-template>
 
   </div>
 </form>
