Added positive param to currency input

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -34,8 +34,7 @@
        inputId="currencyInput"
        controlClass="currency-input"
        formControlName="currency"
-       placeholder="0"
-       [positive]="false"
+       [positive]="true"
        [locale]="'de-DE'"
        [prefix]="currencyInputLabel"
        [suffix]="currencyInputError"
