--- a/projects/controls-library/src/lib/shared/components/positive-integer-input/positive-integer-input.component.html
+++ b/projects/controls-library/src/lib/shared/components/positive-integer-input/positive-integer-input.component.html
@@ -1,14 +1,15 @@
 <div [ngClass]="containerClass">
     <ng-container *ngTemplateOutlet="prefix"></ng-container>
 
-<input
-    #inputControl
-    type="text"
-    [id]="inputId"
-    [class]="controlClass"
-    [ngClass]="additionalClass"
-    [formControl]="formControl"
-    (blur)="touched()">
+    <input
+        #inputControl
+        type="text"
+        [id]="inputId"
+        [class]="controlClass"
+        [ngClass]="additionalClass"
+        [formControl]="formControl"
+        (blur)="onBlur()"
+        (focus)="onFocus()">
 
     <ng-container *ngTemplateOutlet="suffix"></ng-container>
 </div>
