Start to refactoring positive-integer, added base class, placeholder tests

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <form [formGroup]="form">
   <div>
 
-    <ng-template #numberRangeLabel>
+    <!-- <ng-template #numberRangeLabel>
       <label for="rangeInput">Number range input</label><br>
     </ng-template>
 
@@ -47,7 +47,7 @@
       </div>
     </ng-template>
 
-    <hr>
+    <hr> -->
 
     <ng-template #positiveIntegerInputLabel>
       <label for="positiveInteger">Positive integer input</label><br>
